tests/ui/rfcs/rfc-3348-c-string-literals/gate.stderr
error: prefix `c` is unknown
  --> $DIR/gate.rs:10:5
   |
LL |     c"foo";
   |     ^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     c "foo";
   |      +

error: prefix `c` is unknown
  --> $DIR/gate.rs:13:8
   |
LL |     m!(c"test");
   |        ^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     m!(c "test");
   |         +

error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `"foo"`
  --> $DIR/gate.rs:10:6
   |
LL |     c"foo";
   |      ^^^^^ expected one of 8 possible tokens

error: aborting due to 3 previous errors

